tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_include_errors.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/include/error_in_included.txt
---
error: Field `undefined_var` is not defined
 --> included:1:3
  |
1 | {{ undefined_var }}
  |    ^^^^^^^^^^^^^

note: called from tpl:1:11
  |
1 | {% include "included" %}
  |            ^^^^^^^^^^
